[tool.poetry]
name = "balladeer-subway"
version = "0.1.0"
description = "A grimy subway simulation using the python tool balladeer."
authors = ["Daniel Talsky <danieltalsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
